# InterfaceMirror

./: App.css  App.tsx  Cargo.toml  LICENSE  README.md  build_project.sh  css?family=Exo+2  index.html  package-lock.json  package.json  pretty.sh  rebuild.sh  tsconfig.json  tsconfig.node.json  vite.config.ts  zkg16.ts
.cargo/: config.toml
.forgejo/workflows/: vite.yaml
proofs/: hermez-raw-11  hermez-raw-7
public/: asset.wasm  asset_0001.zkey  latest.wasm  possy.wasm  possy_0000.zkey  withdraw.wasm
public/coin_logos/images/: download.sh
public/pkg/: README.md  generate_zk_wasm.d.ts
public/proofs/: hermez-raw-2  hermez-raw-3
scripts/: convert-pkey-to-wasmsnark.cjs
src/: .App.tsx.swp  App.css  App.tsx  lib.rs  main.tsx  proof-worker.js  root.css  utils.rs  vite-env.d.ts  zk.rs
src/components/: EvmWalletConnection.tsx  SwapStatusTracker.tsx  UnifiedWalletSelector.tsx  WalletConnection.tsx
src/config/: wagmi.ts
src/context/: Web3Provider.tsx
src/hooks/: useEthersSigner.ts
src/pkg/: generate_zk_wasm.js  generate_zk_wasm_bg.wasm  generate_zk_wasm_bg.wasm.d.ts  package.json
src/tests/: balance.ts  dotksmprice.ts  foreign_asset_balance.ts  generates_tx.ts  txtest.ts
src/transactions/: adresses.ts  make_proof.sh  merkle.ts  shield.tsx  txgen.ts  unshield.ts  wasmsnark-prover.ts  xcm.ts  zkg16.ts  zklib.ts
src/types/: appkit.d.ts  talismn.d.ts
src/workers/: snarkjs-client.ts  snarkjs-worker.ts
