# Copyright 2025 Kusama Shield Developers on behalf of the Kusama DAO, see LICENSE in main folder.

[package]
name = "generate-zk-wasm"
version = "0.1.2"
authors = ["Kusama Shield Devs"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = {version ="0.2.84", features = [
    "enable-interning", "serde-serialize"
] }
wasm-bindgen-rayon = "1.2"
getrandom = { version = "0.2", features = ["js"] }
halo2_solidity_verifier = { git = "https://github.com/privacy-scaling-explorations/halo2-solidity-verifier", features=["evm"] }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.3.0" }
halo2_poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon-gadget" }
serde = { version = "1.0.219", features = ["derive"] }
hex = "0.4.3"
serde_json = "1.0.140"
rand = "0.8.5"
reqwest = { version = "0.11.14", default-features = false, features = [
    "default-tls",
    "multipart",
    "stream",
] }


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
anyhow = {version = "1.0.98", features = ["std"]}
web-sys = { version = "0.3", features = ["Window", "console", "Response", "Request", "Headers"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3.77"
rand_core = "0.6.4"

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+atomics,+bulk-memory"]

[unstable]
build-std = ["panic_abort", "std"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 'z'  # Optimize for size
lto = true       # Link-time optimization
codegen-units = 1
panic = 'abort'  # Reduce panic overhead



 #implement Clone for Pow chip
[patch."https://github.com/privacy-scaling-explorations/poseidon-gadget"]
halo2_poseidon = { git = "https://github.com/flipchan/poseidon-gadget", branch="pos_chip" }

